cmake_minimum_required(VERSION 3.14)
project(leetcode_record)

set(CMAKE_CXX_STANDARD 11)

add_executable(leetcode_record main.cpp jianzhi_offer_5.cpp jianzhi_offer_9.cpp jianzhi_offer_11.cpp jianzhi_offer_15.cpp jianzhi_offer_41.cpp leetcode_146.cpp leetcode_15.cpp leetcode_20.cpp leetcode_64.cpp leetcode_13.cpp leetcode_23.cpp leetcode_29.cpp leetcode_137.cpp leetcode_190.cpp leetcode_187.cpp leetcode_201.cpp leetcode_268.cpp leetcode_318.cpp leetcode_338.cpp)