cmake_minimum_required(VERSION 3.14)
project(leetcode_record)

set(CMAKE_CXX_STANDARD 11)

add_executable(leetcode_record main.cpp jianzhi_offer_5.cpp jianzhi_offer_9.cpp jianzhi_offer_11.cpp jianzhi_offer_15.cpp jianzhi_offer_41.cpp leetcode_146.cpp leetcode_15.cpp leetcode_20.cpp leetcode_64.cpp leetcode_13.cpp leetcode_23.cpp leetcode_29.cpp leetcode_137.cpp leetcode_190.cpp leetcode_187.cpp leetcode_201.cpp leetcode_268.cpp leetcode_318.cpp leetcode_338.cpp leetcode_371.cpp leetcode_207.cpp leetcode_72.cpp byte_camp.cpp leetcode_12.cpp leetcode_32.cpp leetcode_39.cpp leetcode_41.cpp leetcode_42.cpp leetcode_63.cpp leetcode_95.cpp leetcode_120.cpp leetcode_54.cpp leetcode_152.cpp leetcode_138.cpp leetcode_221.cpp leetcode_238.cpp)